// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compareByKey unit tests Hash map creation test Should correctly map the files 1`] = `
{
  "145543598": {
    "bank_name": "Phillipe",
    "city": "Largo",
    "hash": "2e767915b4e52a44dc2afb128da162f34ce47168",
    "routing_number": 145543598,
    "state": "Florida",
    "zip": "34643",
  },
  "149772497": {
    "bank_name": "Shelby",
    "city": "Shreveport",
    "hash": "f8e4db99a3ef164106449a8dc74825a109811e27",
    "routing_number": 149772497,
    "state": "Louisiana",
    "zip": "71130",
  },
  "151532905": {
    "bank_name": "Danielle",
    "city": "Midland",
    "hash": "7d6feb1d4035e438595424d801170bf90216cb3e",
    "routing_number": 151532905,
    "state": "Texas",
    "zip": "78703",
  },
  "154955464": {
    "bank_name": "Marcy",
    "city": "Norfolk",
    "hash": "33a0f99e6af60ec44f619d3f97e5b7b8ecdc54fa",
    "routing_number": 154955464,
    "state": "Virginia",
    "zip": "23520",
  },
  "173060444": {
    "bank_name": "Valene",
    "city": "Fairbanks",
    "hash": "744d11ac0b61eeab85b094785198e7c528b21683",
    "routing_number": 173060444,
    "state": "Alaska",
    "zip": "99790",
  },
  "184481379": {
    "bank_name": "Yoko",
    "city": "Washington",
    "hash": "361a2a34babebbbf499b53aeeabf61943e36e08d",
    "routing_number": 184481379,
    "state": "District of Columbia",
    "zip": "20337",
  },
  "202463187": {
    "bank_name": "Francis",
    "city": "Worcester",
    "hash": "cfe3939c145d1d1e0a4a7df37e4d1251ed72c2ea",
    "routing_number": 202463187,
    "state": "Massachusetts",
    "zip": "01605",
  },
  "224887802": {
    "bank_name": "Karilynn",
    "city": "Honolulu",
    "hash": "c6e489d5287fa3212125d9bd5fe52e682b2e1c4a",
    "routing_number": 224887802,
    "state": "Hawaii",
    "zip": "96850",
  },
  "228880440": {
    "bank_name": "Walsh",
    "city": "Oklahoma City",
    "hash": "848a4c9faed2572d3f6f0f23d01c723b0e3bda9d",
    "routing_number": 228880440,
    "state": "Oklahoma",
    "zip": "73135",
  },
  "270117236": {
    "bank_name": "Harmony",
    "city": "Charlotte",
    "hash": "f197b502645092984c0b9ff62a719b06ae8b1b65",
    "routing_number": 270117236,
    "state": "North Carolina",
    "zip": "28210",
  },
  "279027748": {
    "bank_name": "Kirsteni",
    "city": "Seattle",
    "hash": "89d4e1eb9711d3de3f06e3a93cbf23168076e609",
    "routing_number": 279027748,
    "state": "Washington",
    "zip": "98104",
  },
  "288115184": {
    "bank_name": "Griffin",
    "city": "Sacramento",
    "hash": "7196a828aacd8406ae19ef60b01c36db52c1fb7b",
    "routing_number": 288115184,
    "state": "California",
    "zip": "94297",
  },
  "304952129": {
    "bank_name": "Mannie",
    "city": "New York City",
    "hash": "2704228e27d4bac641483b24e4542069ad6e5feb",
    "routing_number": 304952129,
    "state": "New York",
    "zip": "10184",
  },
  "310231910": {
    "bank_name": "Kylila",
    "city": "Birmingham",
    "hash": "82352b90bbd14a8aee4dd9766bbb646ccedc071c",
    "routing_number": 310231910,
    "state": "Alabama",
    "zip": "35295",
  },
  "312666186": {
    "bank_name": "Marlane",
    "city": "Peoria",
    "hash": "57b3590027cba0c5fecea02552e0e52a61a140d8",
    "routing_number": 312666186,
    "state": "Illinois",
    "zip": "61651",
  },
  "316489490": {
    "bank_name": "Tait",
    "city": "Saint Louis",
    "hash": "e37f810ab769fabae9a2036d0f9e6d108408fcde",
    "routing_number": 316489490,
    "state": "Missouri",
    "zip": "63126",
  },
  "331421157": {
    "bank_name": "Ward",
    "city": "Chicago",
    "hash": "53df8535394114f1357fdf2bb96007e6165138cd",
    "routing_number": 331421157,
    "state": "Illinois",
    "zip": "61656",
  },
  "407981014": {
    "bank_name": "Eunice",
    "city": "Lansing",
    "hash": "5faecb4b020d67995a0c461aa44ca3204b575a08",
    "routing_number": 407981014,
    "state": "Michigan",
    "zip": "48930",
  },
  "423427452": {
    "bank_name": "Delmer",
    "city": "Denver",
    "hash": "f8a7018b475e2318b7f2b9f720e433d58dea0c9e",
    "routing_number": 423427452,
    "state": "Colorado",
    "zip": "80270",
  },
  "426945562": {
    "bank_name": "Court",
    "city": "Washington",
    "hash": "3c418187f9a03278805558f6aa44202f41805f61",
    "routing_number": 426945562,
    "state": "District of Columbia",
    "zip": "20503",
  },
  "473229698": {
    "bank_name": "Parker",
    "city": "Jackson",
    "hash": "f1780a07d2ebe521a2fa35743143204c3a7b0e0c",
    "routing_number": 473229698,
    "state": "Mississippi",
    "zip": "39282",
  },
  "498873111": {
    "bank_name": "Erin",
    "city": "Denver",
    "hash": "e35978f66d38612ea9242413f2168fa3532628e2",
    "routing_number": 498873111,
    "state": "Colorado",
    "zip": "80209",
  },
  "514038385": {
    "bank_name": "Cherlyn",
    "city": "North Little Rock",
    "hash": "dd5521c8b3db93bb403dcd99e5c7326be9c72232",
    "routing_number": 514038385,
    "state": "Arkansas",
    "zip": "72118",
  },
  "527362918": {
    "bank_name": "Bili",
    "city": "Saint Paul",
    "hash": "f1cca9a5455ca87fcecaa0130f9aefc507e1134b",
    "routing_number": 527362918,
    "state": "Minnesota",
    "zip": "55146",
  },
  "530484329": {
    "bank_name": "Janifer",
    "city": "Lubbock",
    "hash": "e8a788d335a7d5533ce630a11b4fcc47f0ba73ae",
    "routing_number": 530484329,
    "state": "Texas",
    "zip": "79491",
  },
  "535335163": {
    "bank_name": "Melba",
    "city": "Clearwater",
    "hash": "59d345cbaca6043b5becce9bed5a15366530b670",
    "routing_number": 535335163,
    "state": "Florida",
    "zip": "33758",
  },
  "547444708": {
    "bank_name": "Dorelia",
    "city": "Memphis",
    "hash": "c1a23a7664fd7df7be6c2cd95b2814ee2d770b4f",
    "routing_number": 547444708,
    "state": "Tennessee",
    "zip": "38131",
  },
  "588297101": {
    "bank_name": "Kizzie",
    "city": "Austin",
    "hash": "ddf6fce86af1e62b224a140adf82ff527e68885a",
    "routing_number": 588297101,
    "state": "Texas",
    "zip": "78732",
  },
  "593655726": {
    "bank_name": "Samson",
    "city": "Jamaica",
    "hash": "a7ad8804f3aec5c7de374234fa0ea1588a7771bd",
    "routing_number": 593655726,
    "state": "New York",
    "zip": "11436",
  },
  "617706482": {
    "bank_name": "Carolin",
    "city": "Saint Paul",
    "hash": "5cdb49cf6df13b5f670e925b38d0075e944b2ebd",
    "routing_number": 617706482,
    "state": "Minnesota",
    "zip": "55103",
  },
  "675519439": {
    "bank_name": "Rosita",
    "city": "Albany",
    "hash": "7e627fda741c35c8fa73bf71b752250241668cab",
    "routing_number": 675519439,
    "state": "New York",
    "zip": "12237",
  },
  "692682035": {
    "bank_name": "Viv",
    "city": "Albuquerque",
    "hash": "796160c1f70f4521ec49e75e9e33839fc50def34",
    "routing_number": 692682035,
    "state": "New Mexico",
    "zip": "87180",
  },
  "701886244": {
    "bank_name": "Gwenni",
    "city": "Wichita",
    "hash": "ee9f508458c3cf38ce2331bd286242eece62636f",
    "routing_number": 701886244,
    "state": "Kansas",
    "zip": "67215",
  },
  "707249543": {
    "bank_name": "Dollie",
    "city": "San Antonio",
    "hash": "baa03cb867f0b2cb82d381546afe9c2ecc923b5e",
    "routing_number": 707249543,
    "state": "Texas",
    "zip": "78291",
  },
  "713767044": {
    "bank_name": "Dehlia",
    "city": "Lansing",
    "hash": "17f8662b80154faccff41d37a9abae20682fc8ba",
    "routing_number": 713767044,
    "state": "Michigan",
    "zip": "48901",
  },
  "732919062": {
    "bank_name": "Merle",
    "city": "Denver",
    "hash": "654530b756bba4e8b58e21eaf681a4324c12cbd2",
    "routing_number": 732919062,
    "state": "Colorado",
    "zip": "80930",
  },
  "747464677": {
    "bank_name": "Petronella",
    "city": "Omaha",
    "hash": "9b5a88d62d0e47c59844728dd5acff4573378cfa",
    "routing_number": 747464677,
    "state": "Nebraska",
    "zip": "68134",
  },
  "760086826": {
    "bank_name": "Jaime",
    "city": "Indianapolis",
    "hash": "d2eaee6d2eb249c6681aaf2692debbf399834a41",
    "routing_number": 760086826,
    "state": "Indiana",
    "zip": "46295",
  },
  "811244802": {
    "bank_name": "Trula",
    "city": "Bozeman",
    "hash": "24c31fc647c8e01f7263d6e2744cee984feebfce",
    "routing_number": 811244802,
    "state": "Montana",
    "zip": "59771",
  },
  "842286875": {
    "bank_name": "Lilly",
    "city": "Kissimmee",
    "hash": "7073b8451f0817f726d8d1c69150152657a14fa2",
    "routing_number": 842286875,
    "state": "Florida",
    "zip": "34745",
  },
  "859971484": {
    "bank_name": "Bernardo",
    "city": "Richmond",
    "hash": "84efd33b03c5bc3d43e349cc87100db1e8a2b289",
    "routing_number": 859971484,
    "state": "Virginia",
    "zip": "23293",
  },
  "916490031": {
    "bank_name": "Sandor",
    "city": "New Orleans",
    "hash": "c2a893208034a4b79329dfc100facd94a7e2e20c",
    "routing_number": 916490031,
    "state": "Louisiana",
    "zip": "70183",
  },
  "920233367": {
    "bank_name": "Jolynn",
    "city": "Houston",
    "hash": "ea5b9a085044b2b329edb622ccf0242d5d304986",
    "routing_number": 920233367,
    "state": "Texas",
    "zip": "77010",
  },
  "936501142": {
    "bank_name": "Avery",
    "city": "Tulsa",
    "hash": "7d72e69f422402bd8291a734e9281be793769318",
    "routing_number": 936501142,
    "state": "Oklahoma",
    "zip": "74126",
  },
  "937516362": {
    "bank_name": "Pen",
    "city": "Los Angeles",
    "hash": "19b7ed5609c090a684602a0841de68ca00fd4286",
    "routing_number": 937516362,
    "state": "California",
    "zip": "90101",
  },
}
`;

exports[`compareByKey unit tests Hash map creation test Should correctly map the files 2`] = `
{
  "149772497": {
    "bank_name": "Shelby",
    "city": "Shreveport",
    "hash": "f8e4db99a3ef164106449a8dc74825a109811e27",
    "routing_number": 149772497,
    "state": "Louisiana",
    "zip": "71130",
  },
  "151532905": {
    "bank_name": "Danielle",
    "city": "Austin",
    "hash": "6ea518090cb4f4975f9e9e4597cdbf61a91d55cb",
    "routing_number": 151532905,
    "state": "Texas",
    "zip": "78703",
  },
  "154955464": {
    "bank_name": "Marcy",
    "city": "Norfolk",
    "hash": "33a0f99e6af60ec44f619d3f97e5b7b8ecdc54fa",
    "routing_number": 154955464,
    "state": "Virginia",
    "zip": "23520",
  },
  "173060444": {
    "bank_name": "Valene",
    "city": "Fairbanks",
    "hash": "744d11ac0b61eeab85b094785198e7c528b21683",
    "routing_number": 173060444,
    "state": "Alaska",
    "zip": "99790",
  },
  "184481379": {
    "bank_name": "Yoko",
    "city": "Washington",
    "hash": "361a2a34babebbbf499b53aeeabf61943e36e08d",
    "routing_number": 184481379,
    "state": "District of Columbia",
    "zip": "20337",
  },
  "202463187": {
    "bank_name": "Francis",
    "city": "Worcester",
    "hash": "cfe3939c145d1d1e0a4a7df37e4d1251ed72c2ea",
    "routing_number": 202463187,
    "state": "Massachusetts",
    "zip": "01605",
  },
  "224887802": {
    "bank_name": "Karilynn",
    "city": "Honolulu",
    "hash": "c6e489d5287fa3212125d9bd5fe52e682b2e1c4a",
    "routing_number": 224887802,
    "state": "Hawaii",
    "zip": "96850",
  },
  "228880440": {
    "bank_name": "Walsh",
    "city": "Oklahoma City",
    "hash": "848a4c9faed2572d3f6f0f23d01c723b0e3bda9d",
    "routing_number": 228880440,
    "state": "Oklahoma",
    "zip": "73135",
  },
  "270117236": {
    "bank_name": "Harmony",
    "city": "Charlotte",
    "hash": "f197b502645092984c0b9ff62a719b06ae8b1b65",
    "routing_number": 270117236,
    "state": "North Carolina",
    "zip": "28210",
  },
  "279027748": {
    "bank_name": "Kirsteni",
    "city": "Seattle",
    "hash": "89d4e1eb9711d3de3f06e3a93cbf23168076e609",
    "routing_number": 279027748,
    "state": "Washington",
    "zip": "98104",
  },
  "288115184": {
    "bank_name": "Griffin",
    "city": "Sacramento",
    "hash": "7196a828aacd8406ae19ef60b01c36db52c1fb7b",
    "routing_number": 288115184,
    "state": "California",
    "zip": "94297",
  },
  "304952129": {
    "bank_name": "Mannie",
    "city": "New York City",
    "hash": "2704228e27d4bac641483b24e4542069ad6e5feb",
    "routing_number": 304952129,
    "state": "New York",
    "zip": "10184",
  },
  "310231910": {
    "bank_name": "Kylila",
    "city": "Birmingham",
    "hash": "82352b90bbd14a8aee4dd9766bbb646ccedc071c",
    "routing_number": 310231910,
    "state": "Alabama",
    "zip": "35295",
  },
  "312666186": {
    "bank_name": "Marlane",
    "city": "Peoria",
    "hash": "57b3590027cba0c5fecea02552e0e52a61a140d8",
    "routing_number": 312666186,
    "state": "Illinois",
    "zip": "61651",
  },
  "316489490": {
    "bank_name": "Tait",
    "city": "Saint Louis",
    "hash": "e37f810ab769fabae9a2036d0f9e6d108408fcde",
    "routing_number": 316489490,
    "state": "Missouri",
    "zip": "63126",
  },
  "331421157": {
    "bank_name": "Ward",
    "city": "Peoria",
    "hash": "c74a57da0f0654d51bca8245127ab55227ea277f",
    "routing_number": 331421157,
    "state": "Illinois",
    "zip": "61656",
  },
  "366140410": {
    "bank_name": "Rocky",
    "city": "Los Angeles",
    "hash": "80e4c2c0dee34269610a0df0374829ba6cf54cb9",
    "routing_number": 366140410,
    "state": "California",
    "zip": "90005",
  },
  "407981014": {
    "bank_name": "Eunice",
    "city": "Lansing",
    "hash": "5faecb4b020d67995a0c461aa44ca3204b575a08",
    "routing_number": 407981014,
    "state": "Michigan",
    "zip": "48930",
  },
  "423427452": {
    "bank_name": "Delmer",
    "city": "Denver",
    "hash": "f8a7018b475e2318b7f2b9f720e433d58dea0c9e",
    "routing_number": 423427452,
    "state": "Colorado",
    "zip": "80270",
  },
  "426945562": {
    "bank_name": "Court",
    "city": "Washington",
    "hash": "3c418187f9a03278805558f6aa44202f41805f61",
    "routing_number": 426945562,
    "state": "District of Columbia",
    "zip": "20503",
  },
  "473229698": {
    "bank_name": "Parker",
    "city": "Jackson",
    "hash": "f1780a07d2ebe521a2fa35743143204c3a7b0e0c",
    "routing_number": 473229698,
    "state": "Mississippi",
    "zip": "39282",
  },
  "498873111": {
    "bank_name": "Erin",
    "city": "Denver",
    "hash": "e35978f66d38612ea9242413f2168fa3532628e2",
    "routing_number": 498873111,
    "state": "Colorado",
    "zip": "80209",
  },
  "514038385": {
    "bank_name": "Cherlyn",
    "city": "North Little Rock",
    "hash": "dd5521c8b3db93bb403dcd99e5c7326be9c72232",
    "routing_number": 514038385,
    "state": "Arkansas",
    "zip": "72118",
  },
  "527362918": {
    "bank_name": "Bili",
    "city": "Saint Paul",
    "hash": "f1cca9a5455ca87fcecaa0130f9aefc507e1134b",
    "routing_number": 527362918,
    "state": "Minnesota",
    "zip": "55146",
  },
  "530484329": {
    "bank_name": "Janifer",
    "city": "Lubbock",
    "hash": "e8a788d335a7d5533ce630a11b4fcc47f0ba73ae",
    "routing_number": 530484329,
    "state": "Texas",
    "zip": "79491",
  },
  "535335163": {
    "bank_name": "Melba",
    "city": "Clearwater",
    "hash": "59d345cbaca6043b5becce9bed5a15366530b670",
    "routing_number": 535335163,
    "state": "Florida",
    "zip": "33758",
  },
  "588297101": {
    "bank_name": "Kizzie",
    "city": "Austin",
    "hash": "ddf6fce86af1e62b224a140adf82ff527e68885a",
    "routing_number": 588297101,
    "state": "Texas",
    "zip": "78732",
  },
  "593655726": {
    "bank_name": "Samson",
    "city": "Jamaica",
    "hash": "a7ad8804f3aec5c7de374234fa0ea1588a7771bd",
    "routing_number": 593655726,
    "state": "New York",
    "zip": "11436",
  },
  "617706482": {
    "bank_name": "Carolin",
    "city": "Saint Paul",
    "hash": "5cdb49cf6df13b5f670e925b38d0075e944b2ebd",
    "routing_number": 617706482,
    "state": "Minnesota",
    "zip": "55103",
  },
  "641717493": {
    "bank_name": "Stevie",
    "city": "Lincoln",
    "hash": "25babf4e8789065fae007ac9232dfbf79b0d2366",
    "routing_number": 641717493,
    "state": "Nebraska",
    "zip": "68583",
  },
  "675519439": {
    "bank_name": "Rosita",
    "city": "Albany",
    "hash": "7e627fda741c35c8fa73bf71b752250241668cab",
    "routing_number": 675519439,
    "state": "New York",
    "zip": "12237",
  },
  "692682035": {
    "bank_name": "Viv",
    "city": "Albuquerque",
    "hash": "796160c1f70f4521ec49e75e9e33839fc50def34",
    "routing_number": 692682035,
    "state": "New Mexico",
    "zip": "87180",
  },
  "707249543": {
    "bank_name": "Dollie",
    "city": "San Antonio",
    "hash": "baa03cb867f0b2cb82d381546afe9c2ecc923b5e",
    "routing_number": 707249543,
    "state": "Texas",
    "zip": "78291",
  },
  "713767044": {
    "bank_name": "Dehlia",
    "city": "Lansing",
    "hash": "17f8662b80154faccff41d37a9abae20682fc8ba",
    "routing_number": 713767044,
    "state": "Michigan",
    "zip": "48901",
  },
  "732919062": {
    "bank_name": "Merle",
    "city": "Colorado Springs",
    "hash": "ab0146b04c0c105abebacc855a462e254009b2e2",
    "routing_number": 732919062,
    "state": "Colorado",
    "zip": "80930",
  },
  "747464677": {
    "bank_name": "Petronella",
    "city": "Omaha",
    "hash": "9b5a88d62d0e47c59844728dd5acff4573378cfa",
    "routing_number": 747464677,
    "state": "Nebraska",
    "zip": "68134",
  },
  "807061088": {
    "bank_name": "Sharia",
    "city": "Abilene",
    "hash": "f010acef1baffc60e22d2d7791f4ffd050ccd2f7",
    "routing_number": 807061088,
    "state": "Texas",
    "zip": "79605",
  },
  "811244802": {
    "bank_name": "Trula",
    "city": "Bozeman",
    "hash": "24c31fc647c8e01f7263d6e2744cee984feebfce",
    "routing_number": 811244802,
    "state": "Montana",
    "zip": "59771",
  },
  "812862008": {
    "bank_name": "Alicia",
    "city": "Springfield",
    "hash": "178236efa52f5491f8fd4f6c64d9ecf1afc1b700",
    "routing_number": 812862008,
    "state": "Missouri",
    "zip": "65810",
  },
  "836255617": {
    "bank_name": "Andres",
    "city": "Flushing",
    "hash": "01935e3083c212323c3c929d81838b9c66582fbe",
    "routing_number": 836255617,
    "state": "New York",
    "zip": "11388",
  },
  "842286875": {
    "bank_name": "Lilly",
    "city": "Kissimmee",
    "hash": "7073b8451f0817f726d8d1c69150152657a14fa2",
    "routing_number": 842286875,
    "state": "Florida",
    "zip": "34745",
  },
  "859971484": {
    "bank_name": "Bernardo",
    "city": "Richmond",
    "hash": "84efd33b03c5bc3d43e349cc87100db1e8a2b289",
    "routing_number": 859971484,
    "state": "Virginia",
    "zip": "23293",
  },
  "916490031": {
    "bank_name": "Sandor",
    "city": "New Orleans",
    "hash": "c2a893208034a4b79329dfc100facd94a7e2e20c",
    "routing_number": 916490031,
    "state": "Louisiana",
    "zip": "70183",
  },
  "936501142": {
    "bank_name": "Avery",
    "city": "Tulsa",
    "hash": "7d72e69f422402bd8291a734e9281be793769318",
    "routing_number": 936501142,
    "state": "Oklahoma",
    "zip": "74126",
  },
  "937516362": {
    "bank_name": "Pen",
    "city": "Los Angeles",
    "hash": "19b7ed5609c090a684602a0841de68ca00fd4286",
    "routing_number": 937516362,
    "state": "California",
    "zip": "90101",
  },
}
`;

exports[`compareByKey unit tests Hash map creation test Should ensure we are protected from a duplicate key 1`] = `
{
  "message": "Key is not unique ",
}
`;

exports[`compareByKey unit tests Hash map creation test Should ensure we are protected from an undefined key 1`] = `
{
  "message": "You cannot have an undefined key name",
}
`;

exports[`compareByKey unit tests Hash map creation test Should give me a list of changed data in file 1`] = `
[
  {
    "newData": {
      "bank_name": "Danielle",
      "city": "Austin",
      "routing_number": 151532905,
      "state": "Texas",
      "zip": "78703",
    },
    "oldData": {
      "bank_name": "Danielle",
      "city": "Midland",
      "routing_number": 151532905,
      "state": "Texas",
      "zip": "78703",
    },
  },
  {
    "newData": {
      "bank_name": "Ward",
      "city": "Peoria",
      "routing_number": 331421157,
      "state": "Illinois",
      "zip": "61656",
    },
    "oldData": {
      "bank_name": "Ward",
      "city": "Chicago",
      "routing_number": 331421157,
      "state": "Illinois",
      "zip": "61656",
    },
  },
  {
    "newData": {
      "bank_name": "Merle",
      "city": "Colorado Springs",
      "routing_number": 732919062,
      "state": "Colorado",
      "zip": "80930",
    },
    "oldData": {
      "bank_name": "Merle",
      "city": "Denver",
      "routing_number": 732919062,
      "state": "Colorado",
      "zip": "80930",
    },
  },
]
`;

exports[`compareByKey unit tests Hash map creation test Should give me a list of data no longer in file 1`] = `
[
  {
    "bank_name": "Phillipe",
    "city": "Largo",
    "routing_number": 145543598,
    "state": "Florida",
    "zip": "34643",
  },
  {
    "bank_name": "Dorelia",
    "city": "Memphis",
    "routing_number": 547444708,
    "state": "Tennessee",
    "zip": "38131",
  },
  {
    "bank_name": "Gwenni",
    "city": "Wichita",
    "routing_number": 701886244,
    "state": "Kansas",
    "zip": "67215",
  },
  {
    "bank_name": "Jaime",
    "city": "Indianapolis",
    "routing_number": 760086826,
    "state": "Indiana",
    "zip": "46295",
  },
  {
    "bank_name": "Jolynn",
    "city": "Houston",
    "routing_number": 920233367,
    "state": "Texas",
    "zip": "77010",
  },
]
`;

exports[`compareByKey unit tests Hash map creation test Should give me a list of new data in file 1`] = `
[
  {
    "bank_name": "Rocky",
    "city": "Los Angeles",
    "routing_number": 366140410,
    "state": "California",
    "zip": "90005",
  },
  {
    "bank_name": "Stevie",
    "city": "Lincoln",
    "routing_number": 641717493,
    "state": "Nebraska",
    "zip": "68583",
  },
  {
    "bank_name": "Sharia",
    "city": "Abilene",
    "routing_number": 807061088,
    "state": "Texas",
    "zip": "79605",
  },
  {
    "bank_name": "Alicia",
    "city": "Springfield",
    "routing_number": 812862008,
    "state": "Missouri",
    "zip": "65810",
  },
  {
    "bank_name": "Andres",
    "city": "Flushing",
    "routing_number": 836255617,
    "state": "New York",
    "zip": "11388",
  },
]
`;
